--- a/src/pages/login/login.html
+++ b/src/pages/login/login.html
@@ -15,13 +15,13 @@
 	<form #loginForm="ngForm" novalidate>
 		<ion-list no-lines>
 			<ion-item>
-				<ion-label stacked color="primary">Username</ion-label>
-				<ion-input [(ngModel)]="login.username" name="username" type="text" #username="ngModel" spellcheck="false" autocapitalize="off"
+				<ion-label stacked color="primary">Mobile</ion-label>
+				<ion-input [(ngModel)]="login.mobile" name="username" type="text" #mobile="ngModel" spellcheck="false" autocapitalize="off"
 					required>
 				</ion-input>
 			</ion-item>
-			<p ion-text [hidden]="username.valid || submitted == false" color="danger" padding-left>
-				Username is required
+			<p ion-text [hidden]="mobile.valid || submitted == false" color="danger" padding-left>
+				Mobile is required
 			</p>
 
 			<ion-item>
