added booking & details page

--- a/src/pages/bikes-modal/bikes-modal.html
+++ b/src/pages/bikes-modal/bikes-modal.html
@@ -7,6 +7,11 @@
 <ion-header>
 
   <ion-navbar>
+      <ion-buttons left>
+          <button ion-button icon-only (click)="viewCtrl.dismiss()" class="my-style-for-modal">
+              <ion-icon name="arrow-back"></ion-icon>
+          </button>
+      </ion-buttons>
     <ion-title>bikes-modal</ion-title>
   </ion-navbar>
 
