--- a/src/pages/tabs-page/tabs-page.html
+++ b/src/pages/tabs-page/tabs-page.html
@@ -4,4 +4,5 @@
   <ion-tab [root]="tab3Root" tabTitle="Map" tabIcon="map"></ion-tab>
   <ion-tab [root]="tab4Root" tabTitle="Book Service" tabIcon="calendar"></ion-tab>
   <ion-tab [root]="tab5Root" tabTitle="Bookings" tabIcon="calendar"></ion-tab>
+  <ion-tab [root]="tab6Root" tabTitle="Location" tabIcon="location"></ion-tab>
 </ion-tabs>
