added pickup page - unfinished

--- a/src/pages/book-service/book-service.html
+++ b/src/pages/book-service/book-service.html
@@ -22,8 +22,7 @@
     <ion-datetime displayFormat="MM/DD/YYYY HH:mm" [(ngModel)]="myDate"></ion-datetime>
   </ion-item>
   <ion-item (click)="selectLocation()">
-      <ion-label>Location</ion-label>
-      <ion-input type="text"></ion-input>
+      <ion-label>Pickup Location</ion-label>
     </ion-item>
 </ion-content>
 <ion-footer text-center>
