--- a/src/pages/tabs-page/tabs-page.html
+++ b/src/pages/tabs-page/tabs-page.html
@@ -2,7 +2,6 @@
   <ion-tab [root]="tab1Root" tabTitle="Schedule" tabIcon="calendar" tabUrlPath="conference-schedule"></ion-tab>
   <ion-tab [root]="tab2Root" tabTitle="Speakers" tabIcon="contacts"></ion-tab>
   <!-- <ion-tab [root]="tab3Root" tabTitle="Map" tabIcon="map"></ion-tab> -->
-  <ion-tab [root]="tab4Root" tabTitle="Book Service" tabIcon="calendar"></ion-tab>
+  <ion-tab [root]="tab4Root" tabTitle="Book Service" tabIcon="calendar" [tabsHideOnSubPages]="true"></ion-tab>
   <ion-tab [root]="tab5Root" tabTitle="Bookings" tabIcon="calendar"></ion-tab>
-  <ion-tab [root]="tab6Root" tabTitle="Location" tabIcon="map"></ion-tab>
 </ion-tabs>
