--- a/src/pages/location-pick/location-pick.html
+++ b/src/pages/location-pick/location-pick.html
@@ -7,11 +7,6 @@
 <ion-header>
 
     <ion-navbar>
-        <ion-buttons left>
-            <button ion-button icon-only (click)="viewCtrl.dismiss()" class="my-style-for-modal">
-                <ion-icon name="arrow-back"></ion-icon>
-            </button>
-        </ion-buttons>
       <ion-title>Location</ion-title>
     </ion-navbar>
   
@@ -19,5 +14,13 @@
 
 
 <ion-content padding>
-<div id="map_canvas"></div>
+  <ion-item>
+    <ion-input type="text"></ion-input>
+  </ion-item>
+<div id="map_canvas" style="width: 100%;height: 60%;"></div>
 </ion-content>
+<ion-footer text-center>
+    <ion-toolbar>
+      <ion-title (click)="saveLocation()">SAVE</ion-title>
+    </ion-toolbar>
+  </ion-footer>
