--- a/src/pages/location-pick/location-pick.html
+++ b/src/pages/location-pick/location-pick.html
@@ -9,15 +9,15 @@
     <ion-navbar>
       <ion-title>Location</ion-title>
     </ion-navbar>
-  
+    
   </ion-header>
-
-
+  
+ 
 <ion-content padding>
   <ion-item>
     <ion-input type="text"></ion-input>
   </ion-item>
-<div id="map_canvas" style="width: 100%;height: 60%;"></div>
+  <div id="map_canvas"></div>
 </ion-content>
 <ion-footer text-center>
     <ion-toolbar>
