--- a/src/pages/location-pick/location-pick.html
+++ b/src/pages/location-pick/location-pick.html
@@ -1,27 +1,25 @@
-<!--
-  Generated template for the LocationPickPage page.
 
-  See http://ionicframework.com/docs/components/#navigation for more info on
-  Ionic pages and navigation.
--->
-<ion-header>
-
-    <ion-navbar>
-      <ion-title>Location</ion-title>
-    </ion-navbar>
-    
+<!-- <ion-header transparent>
+  <ion-navbar>
+  </ion-navbar>
   </ion-header>
-  
+   -->
  
-<ion-content padding>
+<ion-content no-padding>
+            <g-map></g-map>
   <ion-item>
+    
     <ion-input type="text" [(ngModel)]="address" name="address"></ion-input> 
   </ion-item>
+  <ion-item>
+      <button ion-button outline>ADD ADDRESS</button><button ion-button outline>TEST</button>
+  </ion-item>
+ 
   <!-- <div id="map_canvas"></div> -->
-  <div id="map_canvas" style="position: relative">
-      <!-- <img src="assets/icon/icons8-marker-26.png" style="position: absolute; left:50%;top:50%;" /> -->
+  <!--<div id="map_canvas" style="position: relative">
+       <img src="assets/icon/icons8-marker-26.png" style="position: absolute; left:50%;top:50%;" /> 
       <img src="assets/icon/Marker-40-80-120px/icons8-marker-40-red.png" style="position: absolute; left:50%;top:50%;margin-left: -20px;margin-top: -39px" />
-  </div>
+  </div>-->
 </ion-content>
 <ion-footer text-center>
     <ion-toolbar>
